--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-use-cart": "^1.13.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.1.3",
     "web-vitals": "^2.1.4"
   },
