--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.1",
     "react-use-cart": "^1.13.0",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.14.4",
     "swiper": "^11.1.3",
     "web-vitals": "^2.1.4"
   },
