--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "react-use-cart": "^1.13.0",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.14.4",
