--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "i18next": "^24.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.1.3",
     "react-multi-carousel": "^2.8.5",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.23.1",
